# bookmark_api

./: .env  Cargo.toml  README.md  package-lock.json
src/: main.rs
src/models/: bookmark.rs  mod.rs
src/routes/: mod.rs
